--- a/css/style.css
+++ b/css/style.css
@@ -111,7 +111,7 @@ section {
    padding: 40px 0px 0px 80px ;
 }
 .inner-sidebar {
-    padding: 173px 80px;
+    padding: 171.4px 80px;
 }
 .contacts {
     padding-top: 80px;
@@ -129,7 +129,6 @@ section {
 }
 .title h1 {
     font-size: 72px;
-    
 }
 
 .scroll-to-down {
@@ -163,6 +162,11 @@ section {
     font-size: 27px;
 }
 
+.separator {
+    margin-top: 10px;
+    display: block;
+}
+
 /* types-of-services */
 
 .grid {
@@ -180,7 +184,6 @@ section {
 
 .shadow {
     border: 1px solid #646251;
-    width: 100%;
     height: 300px;
     position: relative;
     transform: translate(20px, -20px);  
@@ -228,7 +231,9 @@ section {
     gap: 24px;
     margin-top: 55px;
 }
-
+.img-responsive-all {
+    display: none;
+}
 /* footer */
 
 .footer {
@@ -335,4 +340,254 @@ section {
 
 .addition {
     margin-top: 15px;
+}
+
+
+/* responsive */
+
+@media screen and (max-width: 1400px) {
+    .container {
+        width: 1140px;
+    }
+    .grid-img {
+        width: 350px;
+    }
+    .shadow {
+        height: 260px;
+    }
+}
+@media screen and (max-width: 1140px) {
+    .container {
+        width: 960px;
+    }
+    .container.comment {
+        width: 615px;
+    }
+    .inner-sidebar {
+        padding: 143.4px 80px;
+    }
+    .nav {
+        width: 300px;
+    }
+    .grid-img {
+        width: 300px;
+    }
+    .shadow {
+        height: 230px;
+    }
+    .title {
+        width: 435px;
+    }
+    .works {
+        margin-top: 130px;
+    }
+    /* fonts */
+    p {
+        font-size: 16px;
+    }
+    .comment-text p {
+        font-size: 25px;
+    }
+    .title h1 {
+        font-size: 60px;
+    }
+    h2 {
+        font-size: 40px;
+    }
+    h3 {
+        font-size: 27px;
+    }
+    
+
+    /* price-page */
+    .title-work {
+        margin: 50px 0;
+    }
+    .wrapper {
+        column-gap: 35px;
+    }
+    .left-grid-content {
+        padding-top: 15px;
+    }
+    /* contacts-page */
+
+    /* our-team-page */
+
+
+}
+@media screen and (max-width: 992px) {
+    .container {
+        width: 720px;
+    }
+    .navigation {
+        padding-bottom: 20px;
+        align-items: center;
+    }
+    .nav {
+        width: 250px;
+    }
+    .logo {
+        width: 35px;
+    }
+    .inner-sidebar {
+        padding: 71.4px 40px;
+    }
+    .btn img.close {
+        padding-left: 40px;
+    }
+    .title {
+        margin-top: 160px;
+    }
+    .scroll-to-down {
+        margin-top: 200px;
+    }
+    .img-comment {
+        width: 70px;
+    }
+    .grid {
+        grid-template-columns: repeat(2, 1fr);
+    }
+    .grid-img {
+        width: 340px;
+    }
+    .shadow {
+        height: 250px;
+    }
+    .footer {
+        margin-top: 80px;
+        padding: 40px 0;
+    }
+    .title-contacts {
+        padding-bottom: 15px;
+    }
+}
+@media screen and (max-width: 768px) {
+    .container, .container.comment  {
+        width: 540px;
+    }
+    .navigation {
+        border-bottom: none;
+    }
+    .title {
+        width: 400px;
+        margin-bottom: 150px;
+    }
+    .scroll-to-down {
+        display: none;
+    }
+    .sidebar {
+        width: 100%;
+        height: 100%;
+        max-width: none;
+        position: fixed;
+    }
+    .d-none {
+        display: none;
+    }
+    .nav.responsive {
+        flex-direction: column;
+        display: flex;
+        align-items: center;
+        width: auto;
+    }
+    .nav.responsive li p {
+        font-size: 30px;
+        padding-top: 30px;
+    }
+    .comment-img {
+        padding-bottom: 45px;
+    }
+    .works {
+        margin-top: 100px;
+    }
+    .title-work {
+        margin: 0;
+    }
+    .grid-img {
+        width: 260px;
+    }
+    .shadow {
+        height: 200px;
+    }
+    .footer {
+        justify-content: space-around;
+    }
+    .footer .logo {
+        width: 35px;
+    }
+    .img-inst .inst {
+        width: 30px;
+        margin-top: 10px;
+    }
+    /* fonts */
+    .title h1 {
+        font-size: 55px;
+    }
+    h2 {
+        font-size: 37px;
+    }
+    h3 {
+        font-size: 25px;
+    }
+    .comment-text p {
+        font-size: 22px;
+    }
+    p {
+        font-size: 13px;
+    }
+}
+@media screen and (max-width: 576px) {
+    .container, .container.comment {
+        width: 96.5%;
+    }
+    .title {
+        width: auto;
+    }
+    .grid {
+        grid-template-columns: repeat(1, 1fr);
+        margin: 0 auto;
+        width: 50%;
+        margin-top: 50px;
+        row-gap: 40px;
+    }
+    .shadow {
+        width: 250px;
+    }
+    .name-grid {
+        padding-top: 20px;
+    }
+    .img-all {
+        display: none;
+    }
+    .img-all.mobile {
+        display: flex;
+        flex-direction: column;
+        row-gap: 10px;
+    }
+    .img-responsive-all {
+        gap: 10px;
+        grid-template-columns: repeat(1, 1fr 2fr);
+        display: grid;
+    }
+    .img-works {
+        display: flex;
+    }
+    .img-works.responsive-grid {
+        row-gap: 10px;
+        display: grid;
+    }
+    .another {
+        display: grid;
+        grid-template-columns: repeat(1, 2fr 1fr);
+    }
+}
+@media screen and (max-width: 425px) {
+    .grid {
+        width: 80%;
+    }
+}
+@media screen and (max-width: 375px) {
+    .title {
+        margin: 100px 0;
+    }
 }
